name:          system-stats
version:       0.1
synopsis:      Cross platform access to stats like CPU, RAM & Disk usage
--Description:
homepage:      http://github.com/jystic/system-stats
license:       BSD3
license-file:  LICENSE
author:        Jacob Stanley <jacob@stanley.io>
maintainer:    Jacob Stanley <jacob@stanley.io>
copyright:     Copyright (c) Jacob Stanley 2011
category:      System
build-type:    Simple
cabal-version: >=1.2

source-repository head
  type:     git
  location: https://github.com/jystic/system-stats.git

library
  hs-source-dirs: src

  exposed-modules:
    System.Stats.CPU

  build-depends:
    base == 4.*,
    bytestring == 0.9.*

  ghc-options:
    -Wall
    -funbox-strict-fields
    -fwarn-tabs
    -fno-warn-orphans
    -fno-warn-unused-do-bind
